minor changes to art

--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -4,125 +4,125 @@
 <!-- started working on nov 7 -->
 
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="icon" type="image/x-icon" href="/!g/pix/catdraw.gif">
- <link href="body.css" rel="stylesheet">
- <link href="/fonts/stylesheet.css" rel="stylesheet">
- <title>my silly art</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/!g/pix/catdraw.gif">
+  <link href="body.css" rel="stylesheet">
+  <link href="/fonts/stylesheet.css" rel="stylesheet">
+  <title>my silly art</title>
 </head>
 <!-- keep adding captions to things / new bg -->
 
 <body>
 
- <aside id="sidebar">
-  <h1>doqmeat's silly art</h1>
-  <p>i will also include here some other projects that aren't drawings!</p>
-  <p><b>tools:</b> clip studio paint + HP convertible laptop w/ stylus + chromatek watercolor brush pens</p>
-  <nav>
-   <h3>type</h3>
-   <button id="default" onclick="showCat('box')">all</button>
-   <button onclick="showCat('doodle')">doodle</button>
-   <button onclick="showCat('full')">illustration</button>
-   <button onclick="showCat('journal')">journal</button>
-   <button onclick="showCat('misc')">misc</button>
+  <aside id="sidebar">
+    <h1>doqmeat's silly art</h1>
+    <p>i will also include here some other projects that aren't drawings!</p>
+    <p><b>tools:</b> clip studio paint + HP convertible laptop w/ stylus + chromatek watercolor brush pens</p>
+    <nav>
+      <h3>type</h3>
+      <button id="default" onclick="showCat('box')">all</button>
+      <button onclick="showCat('doodle')">doodle</button>
+      <button onclick="showCat('full')">illustration</button>
+      <button onclick="showCat('journal')">journal</button>
+      <button onclick="showCat('misc')">misc</button>
 
-   <h3>tools</h3>
-   <button onclick="showCat('digital')">digital</button>
-   <button onclick="showCat('trad')">traditional</button>
-   <button onclick="showCat('watercolor')">watercolor</button>
+      <h3>tools</h3>
+      <button onclick="showCat('digital')">digital</button>
+      <button onclick="showCat('trad')">traditional</button>
+      <button onclick="showCat('watercolor')">watercolor</button>
 
-   <h3>year</h3>
-   <button onclick="showCat('2020')">2020</button>
-   <button onclick="showCat('2021')">2021</button>
-   <button onclick="showCat('2022')">2022</button>
-   <button onclick="showCat('2023')">2023</button>
-   <button onclick="showCat('2024')">2024</button>
-  </nav>
+      <h3>year</h3>
+      <button onclick="showCat('2020')">2020</button>
+      <button onclick="showCat('2021')">2021</button>
+      <button onclick="showCat('2022')">2022</button>
+      <button onclick="showCat('2023')">2023</button>
+      <button onclick="showCat('2024')">2024</button>
+    </nav>
 
-  <hr>
-  <center>
-   <p><a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
-   <p>last updated on 11.nov.24</p>
-   <p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: momo, basiic</p>
-  </center>
- </aside>
+    <hr>
+    <center>
+      <p><a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
+      <p>last updated on 11.nov.24</p>
+      <p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: momo, basiic</p>
+    </center>
+  </aside>
 
- <main>
-  <img loading="lazy" id="lucy" src="!g/collage/lucy.jpg" alt="collage of kpop band lucy" class="box journal 2021">
-  <div id="lucy-caption" class="captions">
-   <p>a collage of kpop band lucy done with the inclusions from <i>blue</i></p>
+  <main>
+    <img loading="lazy" id="lucy" src="!g/collage/lucy.jpg" alt="collage of kpop band lucy" class="box journal 2021">
+    <div id="lucy-caption" class="captions">
+      <p>a collage of kpop band lucy done with the inclusions from <i>blue</i></p>
+    </div>
+    <img loading="lazy" src="!g/drawings/oyasumi.jpg" alt="inspired by siinamota's oyasumi" class="box watercolor 2023 trad">
+    <img loading="lazy" src="!g/drawings/241109-doodles.jpg" alt="an assortment of doodles. they are mostly cats" class="box doodle trad 2024" loading="lazy">
+    <img loading="lazy" class="box trad 2023 doodle" src="/vgs/games/pikmin-4/doodle1.jpg" alt="when i was sick with covid all i could do was draw oatchi">
+    <img loading="lazy" class="box trad doodle 2023" src="/vgs/games/pikmin-4/doodle2.jpg" alt="when i was sick with covid all i could do was draw oatchi">
+    <img id="halo" loading="lazy" class="box digital full 2022" src="!g/drawings/halo.png" alt="illustration from siinamota's halo">
+    <div id="halo-caption" class="captions">
+      <p>inspired by siinamota's PV of <a href="https://www.youtube.com/watch?v=WchOJBb--PU" target="_blank">halo</a></p>
+    </div>
+    <img loading="lazy" id="hello-kitty" src="!g/drawings/fastfoodworkerhellokitty1.jpg" alt="hello kitty in her mcdonalds uniform" class="box doodle digital 2023">
+    <div id="hello-kitty-caption" class="captions">
+
+      <p><b>22.jul.23</b> - guys i have not opened clip studio paint in like 6 months... i've been wanting to draw so badly lately but i just have been so unmotivated
+
+      <p>today in particular i was just feeling very anxious. but i remember seeing this pic of a hello kitty plush with a mcdonals uniform and i fell so in love with it.</p>
+
+      <p>so i decided to doodle her!!!! like i didnt have anything in mind for her but i was just feeling so horrible that i thought that maybe drawing this silly ass hello kitty toy would help me calm down. and i will be honest. it really did calm me down.</p>
+
+      <p>i guess that i eventually got really focused in the drawing that i just forgot i was feeling anxious (over nothing btw idk whats happening) in the first place</p>
+
+      hello kitty is so adorable and wholesome to me. i think she would be the happiest fast food worker in the world. anyway thank you hello kitty</p>
+
+    </div>
+    <img loading="lazy" src="!g/drawings/hurricane.jpg" alt="an assortment of doodles done with red and blue ink" class="box full trad 2017">
+    <img loading="lazy" src="!g/collage/olivia.jpg" alt="collage of loona's hyeju" class="box journal 2021">
+    <img loading="lazy" src="!g/drawings/thelittleprince.jpg" alt="the little prince and the fox" class="box doodle watercolor trad 2020">
+    <img loading="lazy" src="!g/drawings/halo2.jpg" alt="a person staring off into the sunset" id="halo1part" class="full 2023 box digital">
+    <div id="halo1part-caption" class="captions">
+      <p>08.dec.22 - based off siinamota's halo PV.</p>
+      <iframe width="90%" height="332" src="https://www.youtube.com/embed/WchOJBb--PU" title="【PowapowaP ft. Hatsune Miku】Halo【English subtitles】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <p>this is the first of three pieces i want to make based off this song's pv. its one of my favorite songs by siinamota because of how haunting and melancholic it sounds.i wanted to create something that would show how i view what's happening to the protagonist while they are saying these things since the video and song are pretty vague. i also just wanted to caption the feeling of the PV and song. it is one of my favorite songs from siinamota.</p>
+    </div>
+    <img loading="lazy" src="!g/collage/siinamota.jpg" alt="siinamota collage" class="box collage 2022">
+    <img loading="lazy" id="depression-cherry" src="!g/misc/depression-cherry-booklet/1.jpg" class="box misc 2022" alt="depression cherry custom album booklet.">
+    <div id="depression-cherry-caption" class="captions">
+      <p>one day i was bored out of my ass so i make <i>depression cherry</i> a custom made booklet so i could read along the lyrics as the CD plays :) this album includes a booklet but it only has pictures of roses, no lyrics.</p>
+      <p>obviously inspired by the original booklet, and the whole red and rose theming this thing has going on. none of the pictures i used in the making of this are mine and i basically got them from google... all i did was put it all together.</p>
+      <p>you can download the .docx file and print it yourself <a title="dropbox link" href="https://www.dropbox.com/scl/fo/oihls0fyekyp0t1aj2q8g/h?rlkey=3w3xemsxkkndkflxn1bt1wl59&dl=0:" target="_blank" class="outlink">here!</a></p>
+      <p>things used: <a href="https://youtu.be/qEODnWRyfcU" target="_blank" class="outlink">this youtube video</a> on how to make an album booklet, <a href="https://www.photopea.com/" target="_blank">photopea</a>, and ms word for printing and formatting.</p>
+      <img loading="lazy" src="!g/misc/depression-cherry-booklet/2.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+      <img loading="lazy" src="!g/misc/depression-cherry-booklet/3.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+      <img loading="lazy" src="!g/misc/depression-cherry-booklet/4.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+      <img loading="lazy" src="!g/misc/depression-cherry-booklet/5.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+      <img loading="lazy" src="!g/misc/depression-cherry-booklet/6.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+    </div>
+    <img loading="lazy" src="!g/drawings/pan4.jpg" alt="pandora doing the jerma pose" class="box doodle digital">
+    <img loading="lazy" src="!g/drawings/mugung 1.jpg" alt="doodle based of a pic by photographer mugung" class="box doodle digital">
+    <img loading="lazy" src="!g/drawings/yeah.jpg" alt="digital painting of a photo by mugung on instagram" class="box doodle digital">
+    <img loading="lazy" src="!g/drawings/minecraft.png" alt="minecraft mushrooms and enderman doodles" class="box doodle digital 2022">
+    <img loading="lazy" src="!g/drawings/oneandonly.jpg" alt="journal spread based on one & only by gowon" class="box journal trad full">
+    <img loading="lazy" src="!g/drawings/junho.jpg" alt="i love drawing drippin's junho" class="box doodle trad">
+    <img loading="lazy" src="!g/drawings/iffound.jpg" alt="from visual novel if found..." class="box trad full 2020">
+    <img loading="lazy" src="!g/drawings/pandora2.jpg" alt="pandora from guitar hero doodle" class="box">
+    <img loading="lazy" src="!g/drawings/pandora.jpg" alt="a pandora from guitar hero done with watercolors." class="box trad watercolor full">
+    <img loading="lazy" src="!g/drawings/panocto2.jpg" alt="pandora as an octoling" class="box digital full">
+    <img loading="lazy" class="box full 2022 digital" src="!g/drawings/hyperlightdrifter6thanni.jpg" alt="hyper light drifter anniversary art">
+    <img loading="lazy" class="box journal 2020" src="!g/collage/yukika.jpg" alt="yukika collage made for a fancall that i had with her.">
+    <img loading="lazy" class="box doodle digital 2022" src="!g/drawings/pahwah.jpg" alt="doodles of power and meowy from chainsaw man. i love them.">
+    <img loading="lazy" class="box doodle digital 2024" src="!g/drawings/241016-cassiopeia.png" alt="a cassiopeia colored on CSP.">
+    <img loading="lazy" id="casio" class="box doodle 2024" src="!g/drawings/240520-casio.jpg" alt="doodle of cassiopeia">
+    <img loading="lazy" class="box watercolor 2022 full" src="!g/drawings/sepiarecord.jpg" alt="watercolor painting inspired by sepia record">
+    <img loading="lazy" class="box journal 2020" src="!g/collage/loona.jpg" alt="journal page dedicated to loona">
+  </main>
+
+  <div id="pop-up">
+    <button title="close pop-up!" onclick="closePopUp()">x</button>
+    <img id="pic" loading="lazy">
+    <div id="popCap"></div>
   </div>
-  <img loading="lazy" src="!g/drawings/oyasumi.jpg" alt="inspired by siinamota's oyasumi" class="box watercolor 2023 trad">
-  <img loading="lazy" src="!g/drawings/241109-doodles.jpg" alt="an assortment of doodles. they are mostly cats" class="box doodle trad 2024" loading="lazy">
-  <img loading="lazy" class="box trad 2023 doodle" src="/vgs/games/pikmin-4/doodle1.jpg" alt="when i was sick with covid all i could do was draw oatchi">
-  <img loading="lazy" class="box trad doodle 2023" src="/vgs/games/pikmin-4/doodle2.jpg" alt="when i was sick with covid all i could do was draw oatchi">
-  <img id="halo" loading="lazy" class="box digital full 2022" src="!g/drawings/halo.png" alt="illustration from siinamota's halo">
-  <div id="halo-caption" class="captions">
-   <p>inspired by siinamota's PV of <a href="https://www.youtube.com/watch?v=WchOJBb--PU" target="_blank">halo</a></p>
-  </div>
-  <img loading="lazy" id="hello-kitty" src="!g/drawings/fastfoodworkerhellokitty1.jpg" alt="hello kitty in her mcdonalds uniform" class="box doodle digital 2023">
-  <div id="hello-kitty-caption" class="captions">
 
-   <p><b>22.jul.23</b> - guys i have not opened clip studio paint in like 6 months... i've been wanting to draw so badly lately but i just have been so unmotivated
-
-   <p>today in particular i was just feeling very anxious. but i remember seeing this pic of a hello kitty plush with a mcdonals uniform and i fell so in love with it.</p>
-
-   <p>so i decided to doodle her!!!! like i didnt have anything in mind for her but i was just feeling so horrible that i thought that maybe drawing this silly ass hello kitty toy would help me calm down. and i will be honest. it really did calm me down.</p>
-
-   <p>i guess that i eventually got really focused in the drawing that i just forgot i was feeling anxious (over nothing btw idk whats happening) in the first place</p>
-
-   hello kitty is so adorable and wholesome to me. i think she would be the happiest fast food worker in the world. anyway thank you hello kitty</p>
-
-  </div>
-  <img loading="lazy" src="!g/drawings/hurricane.jpg" alt="an assortment of doodles done with red and blue ink" class="box full trad 2017">
-  <img loading="lazy" src="!g/collage/olivia.jpg" alt="collage of loona's hyeju" class="box journal 2021">
-  <img loading="lazy" src="!g/drawings/thelittleprince.jpg" alt="the little prince and the fox" class="box doodle watercolor trad 2020">
-  <img loading="lazy" src="!g/drawings/halo2.jpg" alt="a person staring off into the sunset" id="halo1part" class="full 2023 box digital">
-  <div id="halo1part-caption" class="captions">
-   <p>08.dec.22 - based off siinamota's halo PV.</p>
-   <iframe width="90%" height="332" src="https://www.youtube.com/embed/WchOJBb--PU" title="【PowapowaP ft. Hatsune Miku】Halo【English subtitles】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-   <p>this is the first of three pieces i want to make based off this song's pv. its one of my favorite songs by siinamota because of how haunting and melancholic it sounds.i wanted to create something that would show how i view what's happening to the protagonist while they are saying these things since the video and song are pretty vague. i also just wanted to caption the feeling of the PV and song. it is one of my favorite songs from siinamota.</p>
-  </div>
-  <img loading="lazy" src="!g/collage/siinamota.jpg" alt="siinamota collage" class="box collage 2022">
-  <img loading="lazy" id="depression-cherry" src="!g/misc/depression-cherry-booklet/1.jpg" class="box misc 2022" alt="depression cherry custom album booklet.">
-  <div id="depression-cherry-caption" class="captions">
-   <p>one day i was bored out of my ass so i make <i>depression cherry</i> a custom made booklet so i could read along the lyrics as the CD plays :) this album includes a booklet but it only has pictures of roses, no lyrics.</p>
-   <p>obviously inspired by the original booklet, and the whole red and rose theming this thing has going on. none of the pictures i used in the making of this are mine and i basically got them from google... all i did was put it all together.</p>
-   <p>you can download the .docx file and print it yourself <a title="dropbox link" href="https://www.dropbox.com/scl/fo/oihls0fyekyp0t1aj2q8g/h?rlkey=3w3xemsxkkndkflxn1bt1wl59&dl=0:" target="_blank" class="outlink">here!</a></p>
-   <p>things used: <a href="https://youtu.be/qEODnWRyfcU" target="_blank" class="outlink">this youtube video</a> on how to make an album booklet, <a href="https://www.photopea.com/" target="_blank">photopea</a>, and ms word for printing and formatting.</p>
-   <img loading="lazy" src="!g/misc/depression-cherry-booklet/2.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
-   <img loading="lazy" src="!g/misc/depression-cherry-booklet/3.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
-   <img loading="lazy" src="!g/misc/depression-cherry-booklet/4.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
-   <img loading="lazy" src="!g/misc/depression-cherry-booklet/5.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
-   <img loading="lazy" src="!g/misc/depression-cherry-booklet/6.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
-  </div>
-  <img loading="lazy" src="!g/drawings/pan4.jpg" alt="pandora doing the jerma pose" class="box doodle digital">
-  <img loading="lazy" src="!g/drawings/mugung 1.jpg" alt="doodle based of a pic by photographer mugung" class="box doodle digital">
-  <img loading="lazy" src="!g/drawings/yeah.jpg" alt="digital painting of a photo by mugung on instagram" class="box doodle digital">
-  <img loading="lazy" src="!g/drawings/minecraft.png" alt="" class="box doodle digital 2022">
-  <img loading="lazy" src="!g/drawings/oneandonly.jpg" alt="journal spread based on one & only by gowon" class="box journal trad full">
-  <img loading="lazy" src="!g/drawings/junho.jpg" alt="i love drawing drippin's junho" class="box doodle trad">
-  <img loading="lazy" src="!g/drawings/iffound.jpg" alt="from visual novel if found..." class="box trad full 2020">
-  <img loading="lazy" src="!g/drawings/pandora2.jpg" alt="pandora from guitar hero doodle" class="box">
-  <img loading="lazy" src="!g/drawings/pandora.jpg" alt="a pandora from guitar hero done with watercolors." class="box trad watercolor full">
-  <img loading="lazy" src="!g/drawings/panocto2.jpg" alt="pandora as an octoling" class="box digital full">
-  <img loading="lazy" class="box full 2022 digital" src="!g/drawings/hyperlightdrifter6thanni.jpg" alt="hyper light drifter anniversary art">
-  <img loading="lazy" class="box journal 2020" src="!g/collage/yukika.jpg" alt="yukika collage made for a fancall that i had with her.">
-  <img loading="lazy" class="box doodle digital 2022" src="!g/drawings/pahwah.jpg" alt="doodles of power and meowy from chainsaw man. i love them.">
-  <img loading="lazy" class="box doodle digital 2024" src="!g/drawings/241016-cassiopeia.png" alt="a cassiopeia colored on CSP.">
-  <img loading="lazy" id="casio" class="box doodle 2024" src="!g/drawings/240520-casio.jpg" alt="doodle of cassiopeia">
-  <img loading="lazy" class="box watercolor 2022 full" src="!g/drawings/sepiarecord.jpg" alt="watercolor painting inspired by sepia record">
-  <img loading="lazy" class="box journal 2020" src="!g/collage/loona.jpg" alt="journal page dedicated to loona">
- </main>
-
- <div id="pop-up">
-  <button title="close pop-up!" onclick="closePopUp()">x</button>
-  <img id="pic" loading="lazy" src="" alt="">
-  <div id="popCap"></div>
- </div>
-
- <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
