updated currently + css homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -16,7 +16,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 	<title>des' digital journal</title>
 	<meta name="description" content="des' corner on the interwebs!">
 	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="doqmeat RSS feed">
-	<link rel="icon" type="image/x-icon" href="/!g/pix/dumy.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/silly-cat.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="!f/v5/body.css?0628" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
@@ -163,7 +163,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> bloodborne, overwatch 2, infinity nikki</p>
+					<p><span class="title">playing: </span> overwatch 2, infinity nikki, fallout new vegas, bloodborne</p>
 					<p><span class="title">watching: </span> jojo's bizarre adventure</p>
 					<p><span class="title">reading: </span> <a href="https://javascript.info/" target="_blank" class="outlink">the modern javascript tutorial</a></p>
 					<p><span class="title">working on: </span> <a href="https://roadmap.sh/frontend?s=67a96538f86334348220c214" target="_blank" class="outlink">frontend roadmap</a>, having a fun summer break!</p>
